--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,12 @@
 {
-    "plugins": ["prettier", "import"],
+    "plugins": [
+        "prettier",
+        "import"
+    ],
     "extends": [
-        "plugin:prettier/recommended",
-        "prettier"
+        // "plugin:prettier/recommended",
+        // "prettier",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 2020,
@@ -16,6 +20,7 @@
     "rules": {
         "no-debugger": "off",
         "no-console": 0,
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        " no-explicit-any": "enabled"
     }
 }
